# stereo_camera

./: CMakeLists.txt  new.xml  stereo_cap.cpp  stereo_match.cpp  stereo_match.hpp
